tests/fixtures/compile_errors/cannot_move.fe
contract Foo:
    data: u256[10]

    pub def foo() -> u256[10]:
        return self.data
